Edited all files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="body-div">
-        <h1>Hello, Maks!</h1>
+        <h1>Hello, Maks! You are programmer!</h1>
     </div>
 </body>
 </html>
